--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,41 @@
           }
         }
       }
+    },
+    "ng-theme": {
+      "projectType": "library",
+      "root": "projects/ng-theme",
+      "sourceRoot": "projects/ng-theme/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ng-theme/tsconfig.lib.json",
+            "project": "projects/ng-theme/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ng-theme/src/test.ts",
+            "tsConfig": "projects/ng-theme/tsconfig.spec.json",
+            "karmaConfig": "projects/ng-theme/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ng-theme/tsconfig.lib.json",
+              "projects/ng-theme/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }},
   "defaultProject": "ng-theme-workspace"
 }
